# QuietTools

./: Cargo.toml  README.md  build.rs
resources/: resource.rc
src/: app.rs  clipboard.rs  main.rs  ocr.rs  overlay.rs  screen.rs  window_manager.rs
