[package]
name = "QuietTools"
description = "Useful tools for Windows 10 and 11"
version = "1.0.0"
edition = "2021"

[dependencies]

[target."cfg(windows)".dependencies]
windows = {
  version = "0.62.2",
  features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_Security",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Graphics_Imaging",
    "Media_Ocr",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
  ]
}
windows-future = "0.3.2"

[build-dependencies]
embed-resource = "3.0.9"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
